--- a/src/index.jade
+++ b/src/index.jade
@@ -12,7 +12,7 @@ html
     article
 
       section
-        h1 TKPPL
+        h1 The Table of Future
 
       section
         h2 Keyboard Interaction
