menambahkan nama-nama anggota kelompok

--- a/src/index.jade
+++ b/src/index.jade
@@ -15,9 +15,13 @@ html
         h1 The Table of Future
 
       section
-        h2 Keyboard Interaction
-        h3 Powered by <a href="https://github.com/markdalgleish/bespoke-keys">bespoke-keys</a>
-
+        h2 Anggota
+        ul
+        li Febrina Triani
+        li Hendra Rubento
+        li Suhardi Sitanggang
+        li Willy Pradana
+        
       section
         h2 Touch Interaction
         h3 Powered by <a href="https://github.com/markdalgleish/bespoke-touch">bespoke-touch</a>
