pengantar dan penjelasan judul

--- a/src/index.jade
+++ b/src/index.jade
@@ -17,15 +17,18 @@ html
       section
         h2 Anggota
         ul
-        li Febrina Triani
-        li Hendra Rubento
-        li Suhardi Sitanggang
-        li Willy Pradana
+            li Febrina Triani
+            li Hendra Rubento
+            li Suhardi Sitanggang
+            li Willy Pradana
         
       section
-        h2 Touch Interaction
-        h3 Powered by <a href="https://github.com/markdalgleish/bespoke-touch">bespoke-touch</a>
-
+        h2 The Table Of Future
+        <p>
+        h4 Anda mungkin sudah sering melihat video maupun film yang menampilkan kecanggihan teknologi terbaru untuk masa depan. Tapi apa jadinya jika hal tersebut menjadi nyata dan bisa anda miliki? Saat ini mungkin fungsi meja bagi anda hanya sebagai peralatan rumah tangga untuk meletakkan peralatan tulis menulis atau sekedar pengisi interior ruangan. Microsoft membuat sebuah terobosan dengan teknologi yang diberi nama Microsoft Surface, dimana sebuah kombinasi antara meja, komputer, kamera, serta touch sensivity berukuran sebesar yang memungkinkan pengguna untuk berinteraksi untuk berbagai aktivitas.
+        </p>
+        h5 Pada meja besar yang menggunakan LCD touch screen 40 inci, Microsoft menempatkan sebuah smartphone pada layar, seketika Microsoft Surface akan mengenali perangkat tersebut dan menampilkan informasi mengenai perangkat serta memungkinkan untuk memilih model yang berbeda. Kabarnya, Microsoft telah mengkonfirmasi harga terbaru untuk meja masa depan yang akan mereka rilis nanti di pasar Amerika sebesar $8.900.
+        
       section
         h2 Responsive Slides
         h3 Powered by <a href="https://github.com/markdalgleish/bespoke-scale">bespoke-scale</a>
