menambah penjelassan dari slide 3

--- a/src/index.jade
+++ b/src/index.jade
@@ -27,11 +27,13 @@ html
         <p>
         h4 Anda mungkin sudah sering melihat video maupun film yang menampilkan kecanggihan teknologi terbaru untuk masa depan. Tapi apa jadinya jika hal tersebut menjadi nyata dan bisa anda miliki? Saat ini mungkin fungsi meja bagi anda hanya sebagai peralatan rumah tangga untuk meletakkan peralatan tulis menulis atau sekedar pengisi interior ruangan. Microsoft membuat sebuah terobosan dengan teknologi yang diberi nama Microsoft Surface, dimana sebuah kombinasi antara meja, komputer, kamera, serta touch sensivity berukuran sebesar yang memungkinkan pengguna untuk berinteraksi untuk berbagai aktivitas.
         </p>
-        h5 Pada meja besar yang menggunakan LCD touch screen 40 inci, Microsoft menempatkan sebuah smartphone pada layar, seketika Microsoft Surface akan mengenali perangkat tersebut dan menampilkan informasi mengenai perangkat serta memungkinkan untuk memilih model yang berbeda. Kabarnya, Microsoft telah mengkonfirmasi harga terbaru untuk meja masa depan yang akan mereka rilis nanti di pasar Amerika sebesar $8.900.
-        
+        h5 Apa jadinya jika meja yang sering kita gunakan untuk meletakkan sesuatu atau sebagai penghias ruangan berubah fungsi menjadi gadget yang bermanfaat dan berkualitas tinggi?? itulah yang kita rasakan dengan semakin canggih perkembangan teknologi yang marak di era globalisasi ini. Kita mungkin sering menonton film atau video yang menampilkan kecanggihan teknologi yang mungkin hanya bisa dilihat televisi saja.
+         
       section
-        h2 Responsive Slides
-        h3 Powered by <a href="https://github.com/markdalgleish/bespoke-scale">bespoke-scale</a>
+        h4 Namun tahukah kalian jika semua itu bisa terwujud seiring dengan perkembangan zaman dan SDM yang kreatif dan inovatif untuk membuat sesuatu yang mungkin mustahil untuk diwujudkan menjadi kenyataan?? Microsoft sebagai perusahaan yang juga memproduksi produk-produk dan jasa yang berhubungan dengan komputer meluncurkan terobosan teknologi terkini yaitu Microsoft Surface dimana sebuah kombinasi antara meja, computer, kamera, serta touch sensivity berukuran besar tang memungkinkan pengguna untuk berinteraksi dalam berbagai aktivitas.
+        p
+        h5 Pada meja besar yang menggunakan LCD touch screen 40 inci, Microsoft menempatkan sebuah smartphone pada layar, seketika Microsoft Surface akan mengenali perangkat tersebut dan menampilkan informasi mengenai perangkat serta memungkinkan untuk memilih model yang berbeda. Kabarnya, Microsoft telah mengkonfirmasi harga terbaru untuk meja masa depan yang akan mereka rilis nanti di pasar Amerika sebesar $8.900.
+
 
       section
         h2 Bullet List
