defenisi dan perkembangan google glass

--- a/src/index.jade
+++ b/src/index.jade
@@ -23,17 +23,15 @@ html
             li Willy Pradana
         
       section
-        h2 The Table Of Future
+        h2 Definisi Google Glass 
         <p>
-        h4 Anda mungkin sudah sering melihat video maupun film yang menampilkan kecanggihan teknologi terbaru untuk masa depan. Tapi apa jadinya jika hal tersebut menjadi nyata dan bisa anda miliki? Saat ini mungkin fungsi meja bagi anda hanya sebagai peralatan rumah tangga untuk meletakkan peralatan tulis menulis atau sekedar pengisi interior ruangan. Microsoft membuat sebuah terobosan dengan teknologi yang diberi nama Microsoft Surface, dimana sebuah kombinasi antara meja, komputer, kamera, serta touch sensivity berukuran sebesar yang memungkinkan pengguna untuk berinteraksi untuk berbagai aktivitas.
+        h4 Sebelumnya orang tidak tahu apa itu google glass? Dan akhirnya google menciptakan sebuah teknologi kacamata pintarnya yang diberi nama google glass. Ini bukan hanya kacamata biasa, melainkan ini adalah kacamata pintar yang mempunyai fungsi sama persis seperti smartphone pada umumnya. Saat ini goggle glass ini terus dikembangkan yang memperlihatkan kecanggihan teknologi ini bisa selaras dengan kehidupan manusia sehari – hari. Mungkin dengan kemunculan ini, mungkin ada teknologi ini yang mirip dengan mempunyai kecanggihan yang lebih canggih. Google glass ini akan di produksi secara massal yang tentunya memiliki harga yang lebih terjangkau.
         </p>
-        h5 Apa jadinya jika meja yang sering kita gunakan untuk meletakkan sesuatu atau sebagai penghias ruangan berubah fungsi menjadi gadget yang bermanfaat dan berkualitas tinggi?? itulah yang kita rasakan dengan semakin canggih perkembangan teknologi yang marak di era globalisasi ini. Kita mungkin sering menonton film atau video yang menampilkan kecanggihan teknologi yang mungkin hanya bisa dilihat televisi saja.
-         
+        h5 Kaca Mata Google adalah komputer yang dpt dipakai dengan head-mounted display (HMD) yang sedang dikembangkan oleh Google. Kacamata Google ini menampilkan informasi dalam format smartphone seperti hands-free, yang dapat berinteraksi dengan Internet melalui perintah suara dengan bahasa alami.
       section
-        h4 Namun tahukah kalian jika semua itu bisa terwujud seiring dengan perkembangan zaman dan SDM yang kreatif dan inovatif untuk membuat sesuatu yang mungkin mustahil untuk diwujudkan menjadi kenyataan?? Microsoft sebagai perusahaan yang juga memproduksi produk-produk dan jasa yang berhubungan dengan komputer meluncurkan terobosan teknologi terkini yaitu Microsoft Surface dimana sebuah kombinasi antara meja, computer, kamera, serta touch sensivity berukuran besar tang memungkinkan pengguna untuk berinteraksi dalam berbagai aktivitas.
-        p
-        h5 Pada meja besar yang menggunakan LCD touch screen 40 inci, Microsoft menempatkan sebuah smartphone pada layar, seketika Microsoft Surface akan mengenali perangkat tersebut dan menampilkan informasi mengenai perangkat serta memungkinkan untuk memilih model yang berbeda. Kabarnya, Microsoft telah mengkonfirmasi harga terbaru untuk meja masa depan yang akan mereka rilis nanti di pasar Amerika sebesar $8.900.
-
+        h2 Perkembangan Google Glass
+        <p>
+        h5 Google Glass menjadi produk wearable dari Google yang paling dinanti oleh para pengguna gadget dalam Google I/O tahun ini.Jean Wang yang tak lain merupakan salah satu insinyur dalam pengembangan proyek Google Glass, menjelaskan dalam sebuah video yang diunggah ke Youtube bila Google Glass sendiri berkembang dari konsep awal sebuah proyektor pico yang dipasang pada sebuah kacamata hingga menjadi bentuk cetak 3D seperti prototip Google Glass di kanan atas gambar, hingga terus berkembang dengan bentuk yang lebih baik.Ia juga tidak membantah bahwa inspirasi untuk membuat Google Glass datang dari sebuah tayangan di televisi. Hal tersebut juga menjadi usaha awal tim dalam mengembangkan teknologi gerakan dan kontrol suara pada Google Glass.Dalam Google I/O tahun ini, Google Glass juga mengenalkan aplikasi terbarunya, yaitu MedRef for Glass. Fitur tersebut hadir untuk mempermudah pengguna mengingat nama dan wajah orang lain. MedRef for Glass sendiri hadir karena kebutuhan orang-orang yang bekerja mengandalkan informasi di dalam sebuah rumah sakit.</p>
 
       section
         h2 Bullet List
