--- a/src/index.jade
+++ b/src/index.jade
@@ -4,75 +4,107 @@ html
     meta(charset='utf-8')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
     title TKPPL
-
     link(rel='stylesheet', type='text/css', href='build/build.css')
-
   body
-
     article
-
       section
         h1 Google Glass
-
       section
         h2 Anggota
         ul
-            li Febrina Triani
-            li Hendra Rubento
-            li Suhardi Sitanggang
-            li Willy Pradana
-        
+          li Febrina Triani
+          li Hendra Rubento
+          li Suhardi Sitanggang
+          li Willy Pradana
       section
         h2 Definisi Google Glass 
-        <p>
-        h4 Sebelumnya orang tidak tahu apa itu google glass? Dan akhirnya google menciptakan sebuah teknologi kacamata pintarnya yang diberi nama google glass. Ini bukan hanya kacamata biasa, melainkan ini adalah kacamata pintar yang mempunyai fungsi sama persis seperti smartphone pada umumnya. Saat ini goggle glass ini terus dikembangkan yang memperlihatkan kecanggihan teknologi ini bisa selaras dengan kehidupan manusia sehari – hari. Mungkin dengan kemunculan ini, mungkin ada teknologi ini yang mirip dengan mempunyai kecanggihan yang lebih canggih. Google glass ini akan di produksi secara massal yang tentunya memiliki harga yang lebih terjangkau.
-        </p>
-        h5 Kaca Mata Google adalah komputer yang dpt dipakai dengan head-mounted display (HMD) yang sedang dikembangkan oleh Google. Kacamata Google ini menampilkan informasi dalam format smartphone seperti hands-free, yang dapat berinteraksi dengan Internet melalui perintah suara dengan bahasa alami.
+        p
+        h4
+          | Sebelumnya orang tidak tahu apa itu google glass? Dan akhirnya google menciptakan sebuah teknologi kacamata pintarnya yang diberi nama google glass. Ini bukan hanya kacamata biasa, melainkan ini adalah kacamata pintar yang mempunyai fungsi sama persis seperti smartphone pada umumnya. Saat ini goggle glass ini terus dikembangkan yang memperlihatkan kecanggihan teknologi ini bisa selaras dengan kehidupan manusia sehari – hari. Mungkin dengan kemunculan ini, mungkin ada teknologi ini yang mirip dengan mempunyai kecanggihan yang lebih canggih. Google glass ini akan di produksi secara massal yang tentunya memiliki harga yang lebih terjangkau.
+        p
+        h5
+          | Kaca Mata Google adalah komputer yang dpt dipakai dengan head-mounted display (HMD) yang sedang dikembangkan oleh Google. Kacamata Google ini menampilkan informasi dalam format smartphone seperti hands-free, yang dapat berinteraksi dengan Internet melalui perintah suara dengan bahasa alami.
       section
         h2 Perkembangan Google Glass
-        <p>
-        h5 Google Glass menjadi produk wearable dari Google yang paling dinanti oleh para pengguna gadget dalam Google I/O tahun ini.Jean Wang yang tak lain merupakan salah satu insinyur dalam pengembangan proyek Google Glass, menjelaskan dalam sebuah video yang diunggah ke Youtube bila Google Glass sendiri berkembang dari konsep awal sebuah proyektor pico yang dipasang pada sebuah kacamata hingga menjadi bentuk cetak 3D seperti prototip Google Glass di kanan atas gambar, hingga terus berkembang dengan bentuk yang lebih baik.Ia juga tidak membantah bahwa inspirasi untuk membuat Google Glass datang dari sebuah tayangan di televisi. Hal tersebut juga menjadi usaha awal tim dalam mengembangkan teknologi gerakan dan kontrol suara pada Google Glass.Dalam Google I/O tahun ini, Google Glass juga mengenalkan aplikasi terbarunya, yaitu MedRef for Glass. Fitur tersebut hadir untuk mempermudah pengguna mengingat nama dan wajah orang lain. MedRef for Glass sendiri hadir karena kebutuhan orang-orang yang bekerja mengandalkan informasi di dalam sebuah rumah sakit.</p>
-
+        p
+        h5
+          | Google Glass menjadi produk wearable dari Google yang paling dinanti oleh para pengguna gadget dalam Google I/O tahun ini.Jean Wang yang tak lain merupakan salah satu insinyur dalam pengembangan proyek Google Glass, menjelaskan dalam sebuah video yang diunggah ke Youtube bila Google Glass sendiri berkembang dari konsep awal sebuah proyektor pico yang dipasang pada sebuah kacamata hingga menjadi bentuk cetak 3D seperti prototip Google Glass di kanan atas gambar, hingga terus berkembang dengan bentuk yang lebih baik.Ia juga tidak membantah bahwa inspirasi untuk membuat Google Glass datang dari sebuah tayangan di televisi. Hal tersebut juga menjadi usaha awal tim dalam mengembangkan teknologi gerakan dan kontrol suara pada Google Glass.Dalam Google I/O tahun ini, Google Glass juga mengenalkan aplikasi terbarunya, yaitu MedRef for Glass. Fitur tersebut hadir untuk mempermudah pengguna mengingat nama dan wajah orang lain. MedRef for Glass sendiri hadir karena kebutuhan orang-orang yang bekerja mengandalkan informasi di dalam sebuah rumah sakit.
+          p
       section
-        h2 Bullet List
-        h3.bullet Powered by <a href="https://github.com/markdalgleish/bespoke-bullets">bespoke-bullets</a>
+        h2 Spesifikasi lengkap Google Glass :
+        p
+        h3 Memiliki Prosesor Dual-Core Texas Instrument OMAP 4430 dengan RAM 682 MB.
+        p
         ul
-          li Bullet 1
-          li Bullet 2
-          li Bullet 3
+          li Fitting: 
+        ul
+          li Bantalan hidung dan frame yang bisa disesuaikan dengan semua bentuk wajah
+          li Bantalan hidung tambahan dalam dua ukuran
 
       section
-        h2 Syntax Highlighting
-        h3 Powered by <a href="http://twitter.com/LeaVerou">Lea Verou</a>'s <a href="https://github.com/LeaVerou/prism">Prism</a>
-        pre
-          code.language-javascript.
-            bespoke.from('article', [
-              classes(),
-              keys(),
-              touch(),
-              bullets('li, .bullet')
-            ]);
-
-      section(data-bespoke-hash='named-route')
-        h2 Named Route
-        h3 Powered by <a href="https://github.com/markdalgleish/bespoke-hash">bespoke-hash</a>
-        p Look up! This route has been named with a <em>'data-bespoke-hash'</em> attribute.
-
+        ul
+          li Layar:
+        ul
+          li “Resolusi tinggi setara dengan display high definition dilihat dari jarak 2,5 meter”
+        ul
+          li Kamera:
+        ul
+          li Foto: 5 megapiksel
+          li Video: HD 1280×720 p
+        ul
+          li Audio:
+        ul
+          li “Bone Conduction Transducer”
+        ul
+          li Konektivitas:
+        ul
+          li WiFi 802.11b.g
+          li Bluetooth
+        ul
+          li Media penyimpanan:
+        ul
+          li 16 GB, dengan kapasitas yang bisa dipakai sebesar 12 GB, tersinkronisasi dengan layanan cloud storage Google
+          
+      section
+        ul
+          li Daya tahan baterai:
+        ul
+          li Satu hari penuh, kecuali dipakai untuk merekam video atau video conferencing (hangout)
+        ul
+          li Charger:
+        ul
+          li Charger khusus dengan port micro-USB
+        ul
+          li Kompatibilitas:
+        ul
+          li Semua ponsel dengan kapabilitas Bluetooth
+          li Software pendamping MyGlass membutuhkan sistem operasi Android 4.0.4 (Ice Cream Sandwich) atau yang lebih baru. MyGlass membuka fitur GPS dan SMS pada Google Glass.
+          
       section.emphatic-text(data-bespoke-backdrop='emphatic')
         h2 Emphatic Slide!
-        h3 Powered by <a href="https://github.com/markdalgleish/bespoke-backdrop">bespoke-backdrop</a>
-
+        h3
+          | Powered by 
+          a(href='https://github.com/markdalgleish/bespoke-backdrop') bespoke-backdrop
       section
         h2.bullet Just the beginning...
         br
         ul
-          li Edit <a href="http://jade-lang.com/">Jade</a> markup in <em>'src/index.jade'</em>
-          li Edit <a href="http://learnboost.github.io/stylus/">Stylus</a> styles in <em>'src/styles/main.styl'</em>
-          li Edit JavaScript in <em>'src/scripts/main.js'</em>
+          li
+            | Edit 
+            a(href='http://jade-lang.com/') Jade
+            |  markup in 
+            em 'src/index.jade'
+          li
+            | Edit 
+            a(href='http://learnboost.github.io/stylus/') Stylus
+            |  styles in 
+            em 'src/styles/main.styl'
+          li
+            | Edit JavaScript in 
+            em 'src/scripts/main.js'
         br
         ul
           li
             strong Enjoy! :)
             a(href='http://twitter.com/markdalgleish')  -@markdalgleish
-
     script(src='build/build.js')
