menambahkan kelebihan dan kekurangan google glass

--- a/src/index.jade
+++ b/src/index.jade
@@ -80,11 +80,54 @@ html
           li Semua ponsel dengan kapabilitas Bluetooth
           li Software pendamping MyGlass membutuhkan sistem operasi Android 4.0.4 (Ice Cream Sandwich) atau yang lebih baru. MyGlass membuka fitur GPS dan SMS pada Google Glass.
           
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        h2 Emphatic Slide!
-        h3
-          | Powered by 
-          a(href='https://github.com/markdalgleish/bespoke-backdrop') bespoke-backdrop
+      section
+        h2 Kelebihan 
+        ul
+          li Navigasi dengan jari digunakan untuk menjelajah atau browsing di internet
+        ul
+          li Bingkai terbuat dari titanium sehingga nyaman dan ringan saat dikenakan.
+        ul
+          li Kamera dapat dipergunakan untuk merekam video dan memotret gambar dengan hanya memakai navigasi suara.
+        ul
+          li Gambar mampu direkam hingga resolusi 640×360 pixel.
+        ul
+          li Mengambil gambar dari kacamata
+        ul
+          li Sebagai penunjuk arah
+        ul
+          li Memiliki kemampuan untuk menerjemahkan
+        ul
+          li Voice activation dan voice recognition
+        ul
+          li Video chat dengan teman-teman 
+        ul
+          li Virtual reminder
+        ul
+          li Memiliki kemampuan mencari data untuk bepergian
+
+      section
+        h2 Kekurangan 
+        ul
+          li Digunakan untuk mematai-matai seseorang
+        ul
+          li Melihat pornografi
+        ul
+          li Membuat para penggunanya antisocial
+        ul
+          li Bisa menyebabkan kecelakaan seperti ketika pengemudi menggunakan ponsel. di Amerika sebelum Google glass diluncurkan, Otoritas pemerintah di sana melarang para pengemudi mobil untuk memakai google glass saat berkendara.
+        ul
+          li Kualitas suara rendahan
+        ul
+          li Harga Lumayan Mahal
+        ul
+          li Keamanan Data
+        ul
+          li Tak tertata rapi
+        ul
+          li Tak memberikan ruang interaksi
+        ul
+          li Kapasitas Baterai
+            
       section
         h2.bullet Just the beginning...
         br
